Fix java coding style warnings.